<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">LightVPN</string>
	
	<!-- Main -->
	<string name="connect">On</string>
	<string name="server">Server</string>
	<string name="user_name">User Name</string>
	<string name="password">Password</string>
	<string name="mppe">Mppe Encryption</string>
	<string name="input">Type in the name</string>
	<string name="disconnect">Off</string>
	<string name="dns1">DNS 1</string>
	<string name="dns2">DNS 2</string>
	<string name="gfwlist">CHN Route</string>
	
	<!-- Msg -->
	<string name="plz_wait">Please wait...</string>
	<string name="delete">Delete?</string>

</resources>
