<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<GridLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:alignmentMode="alignBounds"
		android:orientation="horizontal"
		android:columnCount="2"
		android:useDefaultMargins="true"
		android:columnOrderPreserved="false"
 		android:padding="5dp" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="50dp"
 			android:gravity="center_vertical"
			android:text="@string/server" />

		<EditText
			android:id="@+id/server"
			android:ems="10"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:singleLine="true" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center_vertical"
			android:text="@string/user_name" />

		<EditText
			android:id="@+id/username"
			android:ems="10"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:singleLine="true" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center_vertical"
			android:text="@string/password" />

		<EditText
			android:id="@+id/password"
			android:ems="10"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:inputType="textPassword"
			android:singleLine="true" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center_vertical"
			android:text="@string/dns1" />

		<EditText
			android:id="@+id/dns1"
			android:ems="10"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:singleLine="true" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center_vertical"
			android:text="@string/dns2" />

		<EditText
			android:id="@+id/dns2"
			android:ems="10"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:singleLine="true" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center_vertical"
			android:text="@string/mppe" />

		<CheckBox
			android:id="@+id/mppe"
			android:layout_width="wrap_content"
			android:layout_height="50dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center_vertical"
			android:text="@string/gfwlist" />

		<CheckBox
			android:id="@+id/gfwlist"
			android:layout_width="wrap_content"
			android:layout_height="50dp" />

    </GridLayout>

</ScrollView>
